# echoapp

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build.yml  windows.yml
assets/css/: main.css
assets/js/: sweetalert2.min.js
entities/: Cargo.toml
entities/src/: user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250730_095721_create_users_table.rs  m20250730_142827_create_tower_sessions_table.rs  m20250730_144004_create_tower_sessions_table.rs
scripts/: test_api.py
src/: config.rs  error.rs  extractor.rs  main.rs  route.rs  service.rs
src/entities/: user.rs
src/extractor/: initdata.rs  jwt.rs  mod.rs  stricti64.rs  strictuuid.rs
src/handler/: auth.rs  health.rs  mod.rs  user.rs
src/handler/telegram/: body.rs  mod.rs  preview.rs
src/handler/view/: auth.rs  home.rs  middleware.rs  mod.rs  notfound.rs
src/middleware/: initdata.rs  instance_name.rs  jwt.rs  mod.rs  process_time.rs  request_id.rs  session.rs  sync_user.rs  timestamp_guard.rs  validate.rs
src/model/: auth.rs  body.rs  channel.rs  jwt.rs  mod.rs  user.rs
src/response/: generic.rs  mod.rs  models.rs
src/service/: cookie.rs  database.rs  jwt.rs  mod.rs
src/service/telegram/: mod.rs  validation.rs
src/service/telegram/parser/: base.rs  channel_body.rs  channel_common.rs  channel_preview.rs  entities.rs  mod.rs
src/service/telegram/request/: mod.rs
src/util/: cache.rs  mod.rs  string.rs  telegram_logging.rs  validator.rs
tailwind/: base.css
templates/partials/: footer.html
