[package]
name = "tma-rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

[workspace]
members = [".", "entities", "migration"]

[dependencies]
axum = "0.8"
argon2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-br", "compression-deflate", "compression-gzip", "compression-zstd"] }
tower = { version = "0.5", features = ["limit", "buffer", "timeout"] }
bb8 = "0.9"
bb8-redis = "0.24"
redis = { version = "0.32", features = ["tokio-comp", "tokio-native-tls-comp"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1.17"
tracing = "0.1"
sentry = { version = "0.42", features = ["tracing"] }
sentry-tower = "0.42"
uuid = { version = "1.17", features = ["serde", "v4"] }
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.12", features = ["gzip"] }
scraper = "0.23"
lazy_static = "1.5"
url = "2.5"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
migration = { path = "migration" }
entities = { path = "entities" }
anyhow = "1.0"
urlencoding = "2.1"
hmac = "0.12"
sha2 = "0.10"
ahash = "0.8"
hex = "0.4"
base64 = "0.22.1"
ed25519-dalek = "2.2"

[dev-dependencies]
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
