[package]
name = "tma-rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

[workspace]
members = [".", "entities", "migration"]

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace", "compression-br", "compression-deflate", "compression-gzip", "compression-zstd"] }
tower = { version = "0.5.2", features = ["limit", "buffer", "timeout"] }
bb8 = "0.9.0"
bb8-redis = "0.24.0"
redis = { version = "0.32.3", features = ["tokio-comp", "tokio-native-tls-comp"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
num_cpus = "1.17.0"
tracing = "0.1.41"
sentry = { version = "0.42.0", features = ["tracing"] }
sentry-tower = "0.42.0"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
moka = { version = "0.12.10", features = ["future"] }
reqwest = { version = "0.12.23", features = ["gzip"] }
url = "2.5.4"
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
migration = { path = "migration" }
entities = { path = "entities" }
anyhow = "1.0.99"
urlencoding = "2.1.3"
hmac = "0.12.1"
sha2 = "0.10.9"
ahash = "0.8.12"
hex = "0.4.3"
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
subtle = "2.6.1"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
