[package]
name = "echoapp"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
debug = false

[workspace]
members = [".", "entities", "migration"]

[dependencies]
axum = "0.8.6"
axum-extra = { version = "0.10.3", features = ["cookie"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace", "compression-br", "compression-deflate", "compression-gzip", "compression-zstd"] }
tower = { version = "0.5.2", features = ["limit", "buffer", "timeout"] }
bb8 = "0.9.0"
bb8-redis = "0.24.0"
redis = { version = "0.32.7", features = ["tokio-comp", "tokio-native-tls-comp"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
num_cpus = "1.17.0"
tracing = "0.1.41"
sentry = { version = "0.45.0", features = ["tracing"] }
sentry-tower = "0.45.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
moka = { version = "0.12.11", features = ["future"] }
reqwest = { version = "0.12.24", features = ["gzip"] }
url = "2.5.7"
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
migration = { path = "migration" }
entities = { path = "entities" }
anyhow = "1.0.100"
urlencoding = "2.1.3"
hmac = "0.12.1"
sha2 = "0.10.9"
ahash = "0.8.12"
hex = "0.4.3"
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
subtle = "2.6.1"
jwt = "0.16.0"
time = "0.3.44"
rand = "0.9.2"
hostname = "0.4.1"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
